// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing All Teams Page 1`] = `
<div
  class="teamCard-0-2-3 chennai-super-kings-0-2-11"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Chennai Super Kings
    </h2>
    <h3
      class="venue-0-2-9"
    >
      M. A. Chidambaram Stadium
    </h3>
    <div
      class="win-0-2-6"
    >
      <i
        class="fas fa-trophy"
      >
          2010  
          2011  
          2018  
      </i>
    </div>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 2`] = `
<div
  class="teamCard-0-2-3 delhi-capitals-0-2-12"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Delhi Capitals
    </h2>
    <h3
      class="venue-0-2-9"
    >
      Feroz Shah Kotla Ground
    </h3>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 3`] = `
<div
  class="teamCard-0-2-3 kings-xi-punjab-0-2-13"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Kings XI Punjab
    </h2>
    <h3
      class="venue-0-2-9"
    >
      IS Bindra Stadium
    </h3>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 4`] = `
<div
  class="teamCard-0-2-3 kolkata-knight-riders-0-2-14"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Kolkata Knight Riders
    </h2>
    <h3
      class="venue-0-2-9"
    >
      Eden Gardens
    </h3>
    <div
      class="win-0-2-6"
    >
      <i
        class="fas fa-trophy"
      >
          2012  
          2014  
      </i>
    </div>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 5`] = `
<div
  class="teamCard-0-2-3 mumbai-indians-0-2-15"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Mumbai Indians
    </h2>
    <h3
      class="venue-0-2-9"
    >
      Wankhede Stadium
    </h3>
    <div
      class="win-0-2-6"
    >
      <i
        class="fas fa-trophy"
      >
          2013  
          2015  
          2017  
          2019  
      </i>
    </div>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 6`] = `
<div
  class="teamCard-0-2-3 rajasthan-royals-0-2-16"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Rajasthan Royals
    </h2>
    <h3
      class="venue-0-2-9"
    >
      Sawai Mansingh Stadium
    </h3>
    <div
      class="win-0-2-6"
    >
      <i
        class="fas fa-trophy"
      >
          2008  
      </i>
    </div>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 7`] = `
<div
  class="teamCard-0-2-3 royal-challengers-bangalore-0-2-17"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Royal Challengers Bangalore
    </h2>
    <h3
      class="venue-0-2-9"
    >
      M. Chinnaswamy Stadium
    </h3>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;

exports[`testing All Teams Page 8`] = `
<div
  class="teamCard-0-2-3 sunrisers-hyderabad-0-2-18"
  data-testid="cards-teams"
>
  <img
    alt="team-logo"
    class="image-0-2-4"
  />
  <div
    class="tab-0-2-10"
  >
    <h2
      class="teamName-0-2-8"
    >
      Sunrisers Hyderabad
    </h2>
    <h3
      class="venue-0-2-9"
    >
      Rajiv Gandhi Intl. Cricket Stadium
    </h3>
    <div
      class="win-0-2-6"
    >
      <i
        class="fas fa-trophy"
      >
          2016  
      </i>
    </div>
  </div>
  <p
    class="teamHome-0-2-7"
  >
     Team Home
  </p>
  <i
    class="fas fa-angle-right tab-arrow arrow-0-2-5"
  />
</div>
`;
